syntax = "proto3";

package devvit.plugin.redditapi.flair;

option go_package = "github.snooguts.net/reddit/reddit-devplatform-monorepo/go-common/generated/protos/types/devvit/plugin/redditapi";
option java_package = "com.reddit.devvit.plugin.redditapi.flair";

import "google/protobuf/descriptor.proto";
import "google/protobuf/wrappers.proto";

message ClearFlairTemplatesRequest {
  string subreddit = 1;
  string flair_type = 2;
}

message DeleteFlairRequest {
  string subreddit = 1;
  string name = 2;
}

message DeleteFlairTemplateRequest {
  string subreddit = 1;
  string flair_template_id = 2;
}

message FlairRequest {
  string subreddit = 1;
  string css_class = 2;
  string link = 3;
  string name = 4;
  string text = 5;
}

message FlairTemplateOrderRequest {
  string subreddit = 1;
  string flair_type = 2;
  repeated string order = 3;
}

message FlairConfigRequest {
  string subreddit = 1;
  bool flair_enabled = 2;
  string flair_position = 3;
  bool flair_self_assign_enabled = 4;
  string link_flair_position = 5;
  bool link_flair_self_assign_enabled = 6;
}

message FlairCsvRequest {
  string subreddit = 1;
  string flair_csv = 2;
}

message FlairListRequest {
  string subreddit = 1;
  string after = 2;
  string before = 3;
  int64 count = 4;
  int64 limit = 5;
  string name = 6;
  string show = 7;
  bool sr_detail = 8;
}

message FlairSelectorRequest {
  string subreddit = 1;
  bool is_newlink = 2;
  string link = 3;
  string name = 4;
}

message FlairTemplateRequest {
  string subreddit = 1;
  string allowable_content = 2;
  string background_color = 3;
  string css_class = 4;
  string flair_template_id = 5; // no-op
  string flair_type = 6;
  int64 max_emojis = 7;
  bool mod_only = 8;
  bool override_css = 9; // no-op
  string text = 10;
  string text_color = 11;
  bool text_editable = 12;
}

message LinkFlairRequest {
  string subreddit = 1;
}

message SelectFlairRequest {
  string subreddit = 1;
  string background_color = 2;
  string css_class = 3;
  string flair_template_id = 4; // no-op
  string link = 5;
  string name = 6;
  string return_rtjson = 7;
  string text = 8;
  string text_color = 9;
}

message SetFlairEnabledRequest {
  string subreddit = 1;
  bool flair_enabled = 2;
}

message FlairObject {
  google.protobuf.StringValue allowable_content = 1;
  google.protobuf.StringValue text = 2;
  google.protobuf.StringValue text_color = 3;
  bool mod_only = 4;
  google.protobuf.StringValue background_color = 5;
  google.protobuf.StringValue id = 6;
  google.protobuf.StringValue css_class = 7;
  int64 max_emojis = 8;
  repeated google.protobuf.StringValue richtext = 9;
  bool text_editable = 10;
  bool override_css = 11;
  google.protobuf.StringValue type = 12;
  google.protobuf.StringValue flair_type = 13;
}

message FlairArray {
  repeated FlairObject flair = 1;
}

message FlairSelectorResponseOption {
  google.protobuf.StringValue flair_css_class = 1;
  google.protobuf.StringValue flair_template_id = 2;
  google.protobuf.StringValue flair_text = 3;
  google.protobuf.BoolValue flair_text_editable = 4;
  google.protobuf.StringValue flair_position = 5;
}

message FlairSelectorResponse {
  FlairSelectorResponseOption current = 1;
  repeated FlairSelectorResponseOption choices = 2;
}

message UserFlair {
  google.protobuf.StringValue flair_css_class = 1;
  google.protobuf.StringValue user = 2;
  google.protobuf.StringValue flair_text = 3;
}

message FlairListResponse {
  repeated UserFlair users = 1;
}

// options derived from this: 
// https://github.snooguts.net/reddit/reddit-public/blob/ec7d110c0be319e68502828a2662b86caca03a3c/r2/r2/controllers/api.py#L8531
message FlairCsvResultError {
  google.protobuf.StringValue css = 1;
  google.protobuf.StringValue row = 2;
  google.protobuf.StringValue user = 3;
}

message FlairCsvResultWarning {
  google.protobuf.StringValue text = 1;
}

message FlairCsvResult {
  google.protobuf.StringValue status = 1;
  google.protobuf.BoolValue ok = 2;
  FlairCsvResultError errors = 3;
  FlairCsvResultWarning warnings = 4;
}

message FlairCsvResponse {
  repeated FlairCsvResult result = 1;
}
