syntax = "proto3";

package devvit.plugin.redditapi.flair;

option go_package = "github.snooguts.net/reddit/reddit-devplatform-monorepo/go-common/generated/protos/types/devvit/plugin/redditapi";
option java_package = "com.reddit.devvit.plugin.redditapi.flair";

import "devvit/plugin/redditapi/flair/flair_msg.proto";
import "google/protobuf/empty.proto";

// FLAIR - https://www.reddit.com/dev/api#section_flair
service Flair {
  // https://www.reddit.com/dev/api#POST_api_clearflairtemplates
  // returns an ignored jquery response
  rpc ClearFlairTemplates(ClearFlairTemplatesRequest) returns (google.protobuf.Empty);

  // https://www.reddit.com/dev/api#POST_api_deleteflair
  // returns an ignored jquery response
  rpc DeleteFlair(DeleteFlairRequest) returns (google.protobuf.Empty);

  // https://www.reddit.com/dev/api#POST_api_deleteflairtemplate
  // returns an ignored jquery response
  rpc DeleteFlairTemplate(DeleteFlairTemplateRequest) returns (google.protobuf.Empty);

  // https://www.reddit.com/dev/api#POST_api_flair
  // returns an ignored jquery response
  rpc Flair(FlairRequest) returns (google.protobuf.Empty);

  // https://www.reddit.com/dev/api#PATCH_api_flair_template_order
  // Note: Endpoint expects body as raw array of flair id's
  rpc FlairTemplateOrder(FlairTemplateOrderRequest) returns (google.protobuf.Empty);

  // https://www.reddit.com/dev/api#POST_api_flairconfig
  // jquery response we can ignore
  rpc FlairConfig(FlairConfigRequest) returns (google.protobuf.Empty);

  // https://www.reddit.com/dev/api#POST_api_flaircsv
  rpc FlairCsv(FlairCsvRequest) returns (FlairCsvResponse);

  // https://www.reddit.com/dev/api#GET_api_flairlist
  rpc FlairList(FlairListRequest) returns (FlairListResponse);

  // https://www.reddit.com/dev/api#POST_api_flairselector
  rpc FlairSelector(FlairSelectorRequest) returns (FlairSelectorResponse);

  // https://www.reddit.com/dev/api#POST_api_flairtemplate_v2
  // Note: We ignore the "v1" implementation of this method
  // Beware: The JSON response to this endpoint is a FlairObject in camelCase, not snake_case
  // like the other responses.
  rpc FlairTemplate(FlairTemplateRequest) returns (FlairObject);

  // https://www.reddit.com/dev/api#GET_api_link_flair_v2
  // Note: We ignore the "v1" implementation of this method
  rpc LinkFlair(LinkFlairRequest) returns (FlairArray);

  // https://www.reddit.com/dev/api#POST_api_selectflair
  // This has a potential response type, but I think we can ignore. 
  // It's only returned if the user passes return_rtjson as "all" or "only"
  rpc SelectFlair(SelectFlairRequest) returns (google.protobuf.Empty);

  // https://www.reddit.com/dev/api#POST_api_setflairenabled
  // returns jquery response that we ignore
  rpc SetFlairEnabled(SetFlairEnabledRequest) returns (google.protobuf.Empty);

  // https://www.reddit.com/dev/api#GET_api_user_flair_v2
  // Note: We ignore the "v1" implementation of this method
  rpc UserFlair(google.protobuf.Empty) returns (FlairArray);
}
